[gd_scene load_steps=7 format=3 uid="uid://cbpxj6lbxb85p"]

[ext_resource type="FontFile" uid="uid://cerq3c7xefomg" path="res://fonts/Xolonium-Regular.ttf" id="1_37p78"]
[ext_resource type="Script" uid="uid://jpc8mf5h7880" path="res://scenes/hud/hud.gd" id="1_64ctp"]
[ext_resource type="Texture2D" uid="uid://cg0xh48khxkax" path="res://art/button_normal.png" id="3_0bx4p"]
[ext_resource type="Texture2D" uid="uid://cbcx1a2g3aj0p" path="res://art/button_pressed.png" id="4_mgtrf"]

[sub_resource type="InputEventAction" id="InputEventAction_64ctp"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_8sq4i"]
events = [SubResource("InputEventAction_64ctp")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
text = "Evita a los monstruos!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -140.0
offset_right = 200.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_8sq4i")
text = "Comenzar"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobileTouchButtons" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Up" type="TouchScreenButton" parent="MobileTouchButtons"]
position = Vector2(-47, -221)
scale = Vector2(3, 3)
texture_normal = ExtResource("3_0bx4p")
texture_pressed = ExtResource("4_mgtrf")
action = "move_up"
visibility_mode = 1

[node name="Down" type="TouchScreenButton" parent="MobileTouchButtons"]
position = Vector2(49, -35)
rotation = 3.14077
scale = Vector2(3, 3)
texture_normal = ExtResource("3_0bx4p")
texture_pressed = ExtResource("4_mgtrf")
action = "move_down"
visibility_mode = 1

[node name="Left" type="TouchScreenButton" parent="MobileTouchButtons"]
position = Vector2(-118, -79)
rotation = -1.5708
scale = Vector2(3, 3)
texture_normal = ExtResource("3_0bx4p")
texture_pressed = ExtResource("4_mgtrf")
action = "move_left"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="MobileTouchButtons"]
position = Vector2(120, -176)
rotation = 1.5708
scale = Vector2(3, 3)
texture_normal = ExtResource("3_0bx4p")
texture_pressed = ExtResource("4_mgtrf")
action = "move_right"
visibility_mode = 1

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
